phase-2 done
